--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@material-ui/styles": "^4.3.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "formik": "^1.5.8",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
+    "react-helmet-async": "^1.0.2",
     "react-icons": "^3.7.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
