--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "firebase": "^6.5.0",
     "formik": "^1.5.8",
+    "mui-datatables": "^2.10.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet-async": "^1.0.2",
     "react-icons": "^3.7.0",
+    "react-images-upload": "^1.2.7",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
