--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mui-datatables": "^2.10.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-color": "^2.17.3",
     "react-dom": "^16.9.0",
     "react-helmet-async": "^1.0.2",
     "react-icons": "^3.7.0",
