--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "homepage": "http://MehdiNassim.github.io/sayara-dz-fabriquant",
   "dependencies": {
+    "@date-io/moment": "^1.3.9",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.4",
     "@material-ui/styles": "^4.3.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "firebase": "^6.5.0",
     "formik": "^1.5.8",
+    "moment": "^2.24.0",
     "mui-datatables": "^2.10.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
