--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^3.7.0",
     "react-images-upload": "^1.2.7",
     "react-redux": "^7.1.1",
+    "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
